--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,48 +23,29 @@ jobs:
     steps:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 8
-      - name: Install Node.js ${{ matrix.node-version }}
+      - name: 'Install Node.js ${{ matrix.node-version }}'
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
-      - name: Cache Cypress binary
-        id: cache-cypress-binary
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/Cypress
-          key: cypress-binary-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: cypress-binary-
       - name: Install Dependencies
-        if: steps.cache-dependencies.outputs.cache-hit != 'true'
         run: pnpm install
 
   type-check:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node:
-          - 18.16.0
+        node-version: [18.16.0]
     needs:
       - install-cache
     steps:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
-      - name: Install Node.js ${{ matrix.node-version }}
+      - name: 'Install Node.js ${{ matrix.node-version }}'
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
-      - name: Restore npm dependencies
-        uses: actions/cache@v3
-        id: cache-dependencies
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: ${{ runner.os }}-node-
       - name: Check types
         run: pnpm run lint:types
 
@@ -72,86 +53,61 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node:
-          - 18.16.0
+        node-version: [18.16.0]
     needs:
       - type-check
     steps:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
-      - name: Install Node.js ${{ matrix.node-version }}
+      - name: 'Install Node.js ${{ matrix.node-version }}'
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
-      - name: Restore npm dependencies
-        uses: actions/cache@v3
-        id: cache-dependencies
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: ${{ runner.os }}-node-
       - name: Lint with ESLint
-        run: 'pnpm run lint:js'
+        run: pnpm run lint:js
 
   prettier-lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node:
-          - 18.16.0
+        node-version: [18.16.0]
     needs:
       - type-check
     steps:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
-      - name: Install Node.js ${{ matrix.node-version }}
+      - name: 'Install Node.js ${{ matrix.node-version }}'
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
-      - name: Restore npm dependencies
-        uses: actions/cache@v3
-        id: cache-dependencies
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: ${{ runner.os }}-node-
       - name: Lint with Prettier
-        run: 'pnpm run lint:prettier'
+        run: pnpm run lint:prettier
 
   stylelint-lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node:
-          - 18.16.0
+        node-version: [18.16.0]
     needs:
       - type-check
     steps:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
-      - name: Install Node.js ${{ matrix.node-version }}
+      - name: 'Install Node.js ${{ matrix.node-version }}'
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
-      - name: Restore npm dependencies
-        uses: actions/cache@v3
-        id: cache-dependencies
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: ${{ runner.os }}-node-
       - name: Lint with Stylelint
-        run: 'pnpm run lint:styles'
+        run: pnpm run lint:styles
 
   vitest-tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node:
-          - 18.16.0
+        node-version: [18.16.0]
     needs:
       - eslint-lint
       - prettier-lint
@@ -159,44 +115,29 @@ jobs:
     steps:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
-      - name: Install Node.js ${{ matrix.node-version }}
+      - name: 'Install Node.js ${{ matrix.node-version }}'
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
-      - name: Restore npm dependencies
-        uses: actions/cache@v3
-        id: cache-dependencies
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: ${{ runner.os }}-node-
       - name: Run Vitest tests
-        run: 'pnpm run vitest:run'
+        run: pnpm run vitest:run
 
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node:
-          - 18.16.0
+        node-version: [18.16.0]
     needs:
       - vitest-tests
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.0
-      - name: Install Node.js ${{ matrix.node-version }}
+      - name: 'Install Node.js ${{ matrix.node-version }}'
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
-      - name: Restore npm dependencies
-        uses: actions/cache@v3
-        id: cache-dependencies
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: ${{ runner.os }}-node-
       - name: Build Application
         run: pnpm run app:build
 
@@ -204,32 +145,17 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node:
-          - 18.16.0
+        node-version: [18.16.0]
     needs:
       - build
     steps:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
-      - name: Install Node.js ${{ matrix.node-version }}
+      - name: 'Install Node.js ${{ matrix.node-version }}'
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'pnpm'
-      - name: Restore npm dependencies
-        uses: actions/cache@v3
-        id: cache-dependencies
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: ${{ runner.os }}-node-
-      - name: Restore Cypress binary
-        id: cache-cypress-binary
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/Cypress
-          key: cypress-binary-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: cypress-binary-
       - name: Run Cypress test
         uses: cypress-io/github-action@v5
         with:
@@ -243,7 +169,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3.5.0
       - name: Install Vercel CLI
-        run: pnpm install --global vercel@latest
+        run: pnpm add --global vercel@latest
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build Project Artifacts
