--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,6 +48,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install PNPM
         run: npm install -g pnpm
+      - name: Install Dependencies
+        run: pnpm install
       - name: Check types
         run: pnpm run lint:types
 
