--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -16,19 +16,17 @@ jobs:
       - name: Install PNPM
         run: npm install -g pnpm
 
-      - name: Run pnpm setup
-        run: pnpm setup
-        env:
-          SHELL: /bin/bash
+      - name: Install Dependencies
+        run: pnpm install
 
-      - name: Install Vercel CLI
-        run: pnpm add --global vercel@latest
+      - name: Install Vercel CLI Locally
+        run: pnpm add vercel@latest
 
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+        run: npx vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Build Project Artifacts
-        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: npx vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: npx vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
