--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
 
-      - name: 'Install Node.js ${{ matrix.node-version }}'
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
@@ -54,7 +54,7 @@ jobs:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
 
-      - name: 'Install Node.js ${{ matrix.node-version }}'
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
@@ -87,7 +87,7 @@ jobs:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
 
-      - name: 'Install Node.js ${{ matrix.node-version }}'
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
@@ -120,7 +120,7 @@ jobs:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
 
-      - name: 'Install Node.js ${{ matrix.node-version }}'
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
@@ -153,7 +153,7 @@ jobs:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
 
-      - name: 'Install Node.js ${{ matrix.node-version }}'
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
@@ -186,7 +186,7 @@ jobs:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
 
-      - name: 'Install Node.js ${{ matrix.node-version }}'
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
@@ -219,7 +219,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3.5.0
 
-      - name: 'Install Node.js ${{ matrix.node-version }}'
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
@@ -252,7 +252,7 @@ jobs:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
 
-      - name: 'Install Node.js ${{ matrix.node-version }}'
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
