--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,226 +23,281 @@ jobs:
     steps:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
-      - name: 'Install Node.js ${{ matrix.node }}'
+
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: '${{ matrix.node }}'
-      - name: Cache npm dependencies
-        uses: actions/cache@v3
-        id: cache-dependencies
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-node-
-      - name: Cache Cypress binary
-        id: cache-cypress-binary
+          node-version: ${{ matrix.node-version }}
+
+      - name: Cache pnpm dependencies
         uses: actions/cache@v3
         with:
-          path: ~/.cache/Cypress
-          key: cypress-binary-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: cypress-binary-
+          path: |
+            ~/.pnpm-store
+            node_modules
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+
+      - name: Install PNPM
+        run: npm install -g pnpm
+
       - name: Install Dependencies
+        run: pnpm install
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
-        run: npm install --force --non-interactive
 
   type-check:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node:
-          - 18.16.0
-    needs:
-      - install-cache
+        node-version: [18.16.0]
+    needs: install-cache
     steps:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
-      - name: 'Install Node.js ${{ matrix.node }}'
+
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: '${{ matrix.node }}'
-      - name: Restore npm dependencies
+          node-version: ${{ matrix.node-version }}
+
+      - name: Cache pnpm dependencies
         uses: actions/cache@v3
-        id: cache-dependencies
         with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-node-
+          path: |
+            ~/.pnpm-store
+            node_modules
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+
+      - name: Install PNPM
+        run: npm install -g pnpm
+
+      - name: Install Dependencies
+        run: pnpm install
+        if: steps.cache-dependencies.outputs.cache-hit != 'true'
+
       - name: Check types
-        run: npm run lint:types
+        run: pnpm run lint:types
 
   eslint-lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node:
-          - 18.16.0
-    needs:
-      - type-check
+        node-version: [18.16.0]
+    needs: type-check
     steps:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
-      - name: 'Install Node.js ${{ matrix.node }}'
+
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: '${{ matrix.node }}'
-      - name: Restore npm dependencies
+          node-version: ${{ matrix.node-version }}
+
+      - name: Cache pnpm dependencies
         uses: actions/cache@v3
-        id: cache-dependencies
         with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-node-
+          path: |
+            ~/.pnpm-store
+            node_modules
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+
+      - name: Install PNPM
+        run: npm install -g pnpm
+
+      - name: Install Dependencies
+        run: pnpm install
+        if: steps.cache-dependencies.outputs.cache-hit != 'true'
+
       - name: Lint with ESLint
-        run: 'npm run lint:js'
+        run: pnpm run lint:js
 
   prettier-lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node:
-          - 18.16.0
-    needs:
-      - type-check
+        node-version: [18.16.0]
+    needs: type-check
     steps:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
-      - name: 'Install Node.js ${{ matrix.node }}'
+
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: '${{ matrix.node }}'
-      - name: Restore npm dependencies
+          node-version: ${{ matrix.node-version }}
+
+      - name: Cache pnpm dependencies
         uses: actions/cache@v3
-        id: cache-dependencies
         with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-node-
+          path: |
+            ~/.pnpm-store
+            node_modules
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+
+      - name: Install PNPM
+        run: npm install -g pnpm
+
+      - name: Install Dependencies
+        run: pnpm install
+        if: steps.cache-dependencies.outputs.cache-hit != 'true'
+
       - name: Lint with Prettier
-        run: 'npm run lint:prettier'
+        run: pnpm run lint:prettier
 
   stylelint-lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node:
-          - 18.16.0
-    needs:
-      - type-check
+        node-version: [18.16.0]
+    needs: type-check
     steps:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
-      - name: 'Install Node.js ${{ matrix.node }}'
+
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: '${{ matrix.node }}'
-      - name: Restore npm dependencies
+          node-version: ${{ matrix.node-version }}
+
+      - name: Cache pnpm dependencies
         uses: actions/cache@v3
-        id: cache-dependencies
         with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-node-
+          path: |
+            ~/.pnpm-store
+            node_modules
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+
+      - name: Install PNPM
+        run: npm install -g pnpm
+
+      - name: Install Dependencies
+        run: pnpm install
+        if: steps.cache-dependencies.outputs.cache-hit != 'true'
+
       - name: Lint with Stylelint
-        run: 'npm run lint:styles'
+        run: pnpm run lint:styles
 
   vitest-tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node:
-          - 18.16.0
-    needs:
-      - eslint-lint
-      - prettier-lint
-      - stylelint-lint
+        node-version: [18.16.0]
+    needs: [eslint-lint, prettier-lint, stylelint-lint]
     steps:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
-      - name: 'Install Node.js ${{ matrix.node }}'
+
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: '${{ matrix.node }}'
-      - name: Restore npm dependencies
+          node-version: ${{ matrix.node-version }}
+
+      - name: Cache pnpm dependencies
         uses: actions/cache@v3
-        id: cache-dependencies
         with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-node-
+          path: |
+            ~/.pnpm-store
+            node_modules
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+
+      - name: Install PNPM
+        run: npm install -g pnpm
+
+      - name: Install Dependencies
+        run: pnpm install
+        if: steps.cache-dependencies.outputs.cache-hit != 'true'
+
       - name: Run Vitest tests
-        run: 'npm run vitest:run'
+        run: pnpm run vitest:run
 
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node:
-          - 18.16.0
-    needs:
-      - vitest-tests
+        node-version: [18.16.0]
+    needs: vitest-tests
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.5.0
-      - name: 'Install Node.js ${{ matrix.node }}'
+
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: '${{ matrix.node }}'
-      - name: Restore npm dependencies
+          node-version: ${{ matrix.node-version }}
+
+      - name: Cache pnpm dependencies
         uses: actions/cache@v3
-        id: cache-dependencies
         with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-node-
+          path: |
+            ~/.pnpm-store
+            node_modules
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+
+      - name: Install PNPM
+        run: npm install -g pnpm
+
+      - name: Install Dependencies
+        run: pnpm install
+        if: steps.cache-dependencies.outputs.cache-hit != 'true'
+
       - name: Build Application
-        run: npm run app:build
+        run: pnpm run app:build
 
   cypress-component-tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node:
-          - 18.16.0
-    needs:
-      - build
+        node-version: [18.16.0]
+    needs: build
     steps:
       - name: Checkout Commit
         uses: actions/checkout@v3.5.0
-      - name: 'Install Node.js ${{ matrix.node }}'
+
+      - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: '${{ matrix.node }}'
-      - name: Restore npm dependencies
-        uses: actions/cache@v3
-        id: cache-dependencies
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.os }}-node-
-      - name: Restore Cypress binary
-        id: cache-cypress-binary
+          node-version: ${{ matrix.node-version }}
+
+      - name: Cache pnpm dependencies
         uses: actions/cache@v3
         with:
-          path: ~/.cache/Cypress
-          key: cypress-binary-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: cypress-binary-
+          path: |
+            ~/.pnpm-store
+            node_modules
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+
+      - name: Install PNPM
+        run: npm install -g pnpm
+
+      - name: Install Dependencies
+        run: pnpm install
+        if: steps.cache-dependencies.outputs.cache-hit != 'true'
+
       - name: Run Cypress test
         uses: cypress-io/github-action@v5
         with:
           component: true
-          command: npm run cypress:run
+          command: pnpm run cypress:run
 
   deploy-preview:
     runs-on: ubuntu-latest
-    needs:
-      - cypress-component-tests
+    needs: cypress-component-tests
     steps:
       - uses: actions/checkout@v3.5.0
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest
+
+      - name: Install PNPM
+        run: npm install -g pnpm
+
+      - name: Install Dependencies
+        run: pnpm install
+
+      - name: Install Vercel CLI Locally
+        run: pnpm add vercel@latest
+
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+        run: npx vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+
       - name: Build Project Artifacts
-        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+        run: npx vercel build --token=${{ secrets.VERCEL_TOKEN }}
+
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+        run: npx vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
