--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -108,7 +108,7 @@ jobs:
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
 
       - name: Lint with ESLint
-        run: pnpm run lint:js
+        run: pnpm --filter @windows98/eslint run lintfix:js
 
   prettier-lint:
     runs-on: ubuntu-latest
