--- a/core/linters/stylelint/package.json
+++ b/core/linters/stylelint/package.json
@@ -2,6 +2,8 @@
   "author": "Arkadiusz Paściak",
   "description": "Stylelint configuration for Windows 98 project",
   "devDependencies": {
+    "postcss-html": "^1.5.0",
+    "postcss-scss": "^4.0.6",
     "stylelint": "^15.6.3",
     "stylelint-config-recommended-scss": "^12.0.0",
     "stylelint-config-recommended-vue": "^1.4.0"
