--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "docs:preview": "vitepress preview src/docs",
     "cypress:open": "NODE_ENV=test cypress open --config-file ./src/configs/cypress.config.ts",
     "cypress:run": "NODE_ENV=test cypress run --config-file ./src/configs/cypress.config.ts --component --browser chrome",
-    "lint:types": "vue-tsc --noEmit",
     "prepare": "husky install",
     "vitest:dev": "vitest",
     "vitest:run": "vitest run"
@@ -46,7 +45,6 @@
     "vite-plugin-vue-markdown": "^0.23.5",
     "vite-tsconfig-paths": "^4.2.0",
     "vitepress": "^1.0.0-beta.1",
-    "vitest": "^0.31.4",
-    "vue-tsc": "^1.6"
+    "vitest": "^0.31.4"
   }
 }
