add cache cypress in ci/cd part 2

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,6 +45,9 @@ jobs:
         run: pnpm install
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
 
+      - name: Install Cypress
+        run: npx cypress install
+
   type-check:
     runs-on: ubuntu-latest
     strategy:
