fix pacakge manager in cypress installing part 3

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -291,6 +291,10 @@ jobs:
       - name: Install Cypress
         run: pnpm install -w cypress
 
+      - name: Install Cypress binary
+        run: npx cypress install
+        if: steps.cache-cypress-binary.outputs.cache-hit != 'true'
+
       - name: Run Cypress test
         uses: cypress-io/github-action@v5
         with:
