--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -314,7 +314,7 @@ jobs:
         run: pnpm install
 
       - name: Install Vercel CLI Locally
-        run: pnpm add vercel@latest
+        run: pnpm add -w vercel@latest
 
       - name: Pull Vercel Environment Information
         run: npx vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
