--- a/package.json
+++ b/package.json
@@ -20,14 +20,6 @@
     "docs:preview": "vitepress preview src/docs",
     "cypress:open": "NODE_ENV=test cypress open --config-file ./src/configs/cypress.config.ts",
     "cypress:run": "NODE_ENV=test cypress run --config-file ./src/configs/cypress.config.ts --component --browser chrome",
-    "lint:js": "eslint -c ./src/configs/eslint.config.js --ext \".ts,.js,.vue\" .",
-    "lint:prettier": "prettier --config ./src/configs/prettier.config.js --check .",
-    "lint:staged": "npx lint-staged --config ./src/configs/lint-staged.config.js --no-stash",
-    "lint:styles": "stylelint --config ./src/configs/stylelint.config.js **/*.{scss,vue}",
-    "lint:types": "vue-tsc --noEmit",
-    "lintfix:js": "eslint -c ./src/configs/eslint.config.js --fix --ext \".ts,.js,.vue\" .",
-    "lintfix:prettier": "prettier --config ./src/configs/prettier.config.js --write --list-different .",
-    "lintfix:styles": "stylelint --config ./src/configs/stylelint.config.js **/*.{scss,vue} --fix",
     "prepare": "husky install",
     "vitest:dev": "vitest",
     "vitest:run": "vitest run"
@@ -41,32 +33,18 @@
     "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@pinia/testing": "^0.1.2",
     "@types/node": "^20.9.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
     "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
     "cypress": "^12.13.0",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-vue": "^9.14.1",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
-    "lint-staged": "^13.2.2",
-    "postcss-html": "^1.5.0",
-    "postcss-scss": "^4.0.6",
-    "prettier": "^2.8.8",
     "sass": "^1.62.1",
-    "stylelint": "^15.6.3",
-    "stylelint-config-recommended-scss": "^12.0.0",
-    "stylelint-config-recommended-vue": "^1.4.0",
     "typescript": "^5.0.4",
     "vite": "^4.3.9",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-vue-markdown": "^0.23.5",
     "vite-tsconfig-paths": "^4.2.0",
     "vitepress": "^1.0.0-beta.1",
-    "vitest": "^0.31.4",
-    "vue-tsc": "^1.6"
+    "vitest": "^0.31.4"
   }
 }
