--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@vue/test-utils": "^2.3.2",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
+    "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.62.1",
     "typescript": "^5.0.4",
     "vite": "^4.3.9",
