--- a/app/package.json
+++ b/app/package.json
@@ -9,9 +9,7 @@
   "scripts": {
     "app:build": "vite build --config ./configs/vite.config.ts",
     "app:dev": "vite --config ./configs/vite.config.ts",
-    "app:preview": "vite preview --config ./configs/vite.config.ts",
-    "vitest:dev": "vitest -c ./configs/vite.config.ts",
-    "vitest:run": "vitest run -c ./configs/vite.config.ts"
+    "app:preview": "vite preview --config ./configs/vite.config.ts"
   },
   "dependencies": {
     "pinia": "^2.1.3",
