--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@windows98/i18n": "workspace:*",
     "sass": "^1.62.1",
     "typescript": "^5.0.4",
     "vite": "^4.3.9",
