--- a/micro-services/package.json
+++ b/micro-services/package.json
@@ -7,6 +7,7 @@
     "node": "18.16.0"
   },
   "devDependencies": {
-    "@windows98/toolkit": "workspace:*"
+    "@windows98/toolkit": "workspace:*",
+    "@windows98/vitest": "workspace:*"
   }
 }
