--- a/micro-apps/package.json
+++ b/micro-apps/package.json
@@ -9,5 +9,9 @@
   "devDependencies": {
     "@windows98/toolkit": "workspace:*",
     "@windows98/vitest": "workspace:*"
+  },
+  "dependencies": {
+    "mobx": "^6.12.0",
+    "mobx-vue-lite": "^0.4.1"
   }
 }
